fix body overflow hidden

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  */
 
 body {
-  overflow: : hidden;
+  overflow: hidden;
 }
 
 .msg-form {
